--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h1 id="pe">Presentation du site</h1>
         <hr>
         <span class="sp">
-            <p class="p">Ceci est la page d'accueil du site de formation...</p>
+            <p class="p">Ceci est la page d'accueil du site de restauration ...</p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt accusamus dolorum mollitia qui.<br> 
         Explicabo illum minus reprehenderit beatae iure nesciunt dolor pariatur ullam vero possimus quidem similique amet, totam at.
         </span>
